--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
         # uses: googleapis/release-please-action@f0145e31b50c56905571d69a63bbe997c0ce6dd1
         uses: googleapis/release-please-action@v4
         with:
+          skip-labeling: true
           # GitHub token for creating and grooming release PRs, defaults to using secrets.GITHUB_TOKEN
           # token: ${{ github.token }}
           # should the PR be proposed from a fork, Default to false
