--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,4 +17,5 @@ jobs:
       - uses: googleapis/release-please-action@v3
         with:
           release-type: simple
-          # skip-labeling: true
+          config-file: .github/release-please-config.json
+          skip-labeling: true
