--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,7 +15,8 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: googleapis/release-please-action@v3
+      - name: Release
+        uses: googleapis/release-please-action@v3
         with:
           release-type: simple
           config-file: .github/release-please-config.json
