--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+        <com.octanner.oct-oauth2-client-java>1.2.1.0</com.octanner.oct-oauth2-client-java>
+
 	</properties>
 	<dependencies>
 <!--		<dependency>-->
@@ -51,7 +53,14 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>com.octanner</groupId>
+            <artifactId>oct-oauth2-client-java</artifactId>
+            <version>${com.octanner.oct-oauth2-client-java}</version>
+        </dependency>
+
+
+        <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -60,6 +69,7 @@
 <!--			<groupId>org.flywaydb</groupId>-->
 <!--			<artifactId>flyway-core</artifactId>-->
 <!--		</dependency>-->
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
