--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,6 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-        <com.octanner.oct-oauth2-client-java>1.2.1.0</com.octanner.oct-oauth2-client-java>
-
 	</properties>
 	<dependencies>
 <!--		<dependency>-->
@@ -52,13 +50,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
-
         <dependency>
             <groupId>com.octanner</groupId>
             <artifactId>oct-oauth2-client-java</artifactId>
-            <version>${com.octanner.oct-oauth2-client-java}</version>
+            <version>1.2.1.0</version>
         </dependency>
-
 
         <dependency>
 			<groupId>org.projectlombok</groupId>
